--- a/styles/style-inlog.css
+++ b/styles/style-inlog.css
@@ -1,8 +1,6 @@
 /*===================================================
 Font
 ===================================================*/
-
-
 @font-face {
     font-family: 'Univers-Light-Normal';
     src: url('Univers-Light-Normal.eot');
@@ -14,9 +12,13 @@ Font
     font-style: normal;
 }
 
+
+
+
 /*===================================================
 Base CSS
 ===================================================*/
+
 * {
     box-sizing: border-box;
 }
@@ -48,7 +50,6 @@ h3 {font-size: 1.563em;}
 
 h4 {font-size: 1.25em;}
 
-
 /*===================================================
 Nav
 ===================================================*/
@@ -73,79 +74,51 @@ a{
 }
 
 /*===================================================
-picture ( achtergrond foto)
-===================================================*/
-
-picture{
-	
-}
-/*===================================================
-Header
-===================================================*/
-
-header{
-	background-color: rgba(0,48,130,.8);
-	width: 75%;
-	padding: 1em 1em 1em 1em;
-	margin-top: 1em;
-
-}
-header img{
-	object-fit: cover;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    vertical-align: middle;
-}
-header h2{
-	margin-top: 0;
-	margin-bottom: 0;
-	color:white;
-}
-
-/*===================================================
-Section (aanbevolen voor jouw)
-===================================================*/
-header+section {
-	padding: 1em 1em 1em 1em;
-	margin-top: 1em;
-	background-image: url(images/header_trein.jpg);
-	background-color: #f4c015;
-
-}
-
-header+section h2{
-	margin:0;
-}
-section>a{
-	background-color: #0079d3;
-	color: white;
-	box-shadow: inset 0 -0.125rem 0 #005ca0;
-	text-align: center;
-	font-size: 1em;
-	display: inline-block;
-	width: 7.5em;
-}
-
-
-
-/*===================================================
 Main
 ===================================================*/
-main section article{
-	background-color: white;
-	padding: 1em 1em 1em 1em;
-	margin-bottom: 1em;
+
+main{
+	background: white;
+}
+
+/*===================================================
+section met formulier
+===================================================*/
+
+article form {
+	background: #f4c015;
+}
+fieldset{
+	border:none;
+}
+input {
+	width: 100%;
+	padding: 1em 1em;
+    margin: 1em 0;
+    box-sizing: border-box;
+}
+
+input[type=text] {
+    border: none;
+    outline: none;
+}
+
+input[type=text]:focus {
+    border: 0.1em dotted ;
+}
+
+input[type=password] {
+    border: none;
+    outline: none;
+}
+input[type=password]:focus {
+    border: 0.1em dotted ;
 }
 
 /*===================================================
 Footer
 ===================================================*/
+
 footer{
-	background-color: white;
-	font-size: 1em;
-	margin-top: 1em;
-	padding: 1em 1em 1em 1em;
-
+	background: white;
 }
-
