--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,8 @@ body {
     font-family: "Univers-Light-Normal";
     color: black;
     background-color: #e6e6e9;
+    padding:0;
+    margin:0;
 }
 p {
     line-height: 1.5em;
@@ -48,76 +50,110 @@ h3 {font-size: 1.563em;}
 
 h4 {font-size: 1.25em;}
 
+.container{
+	width: 90%;
+	display:flex;
+	margin:auto;
+	position: relative;
+	flex-wrap: wrap;
+}
+.container.up {position: relative;top: -5em;z-index: 5;}
+
 
 /*===================================================
 Nav
 ===================================================*/
-nav section a{
-	display: flex;
-}
-nav section h1{
-	font-size: 1em;
-}
 nav{
 	background-color: white;
-	width: 100%
+	width: 100%;
+	height: 3.750em;
 }
-nav section ul{
-	display: flex;
-	list-style-type:none;
-	justify-content:flex-end;
-	align-items: flex-start;
+nav .container section {
+    width: 20%;
+    padding: 1.2em 0em;
 }
-a{
-	text-decoration: none;
+nav .container section a h1 {
+    display: none;
 }
+nav .container ul {
+    margin: 0;
+    padding: 0;
+    width: 80%;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+nav .container ul li{
 
-/*===================================================
-picture ( achtergrond foto)
-===================================================*/
-
-picture{
+}
+nav .container ul li a img{
 	
 }
+nav .container ul li a span,
+nav .container ul li form {
+    display: none;
+}
+
+
 /*===================================================
-Header
+picture + header ( achtergrond foto)
 ===================================================*/
-
-header{
-	background-color: rgba(0,48,130,.8);
-	width: 75%;
-	padding: 1em 1em 1em 1em;
-	margin-top: 1em;
-
+header {
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	height: 70vh;
 }
-header img{
-	object-fit: cover;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    vertical-align: middle;
+
+header picture{
+	width: 100%;
+	height: 100%;
+	display: block;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+	
 }
+
+header picture img {
+	width: 410%;
+	position: absolute;
+	 /* img mask */
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+
 header h2{
-	margin-top: 0;
-	margin-bottom: 0;
-	color:white;
-}
+	position: absolute;
+	z-index: 2;
+	align-self: center;
+	justify-self:  center;
+	margin: 0px 5%;
+	width: 90%;
+	padding: 1em;
+	background: #005ca0;
+	color: #fff;
+	font-size: 1.25em;
+	line-height: 1.5;
+	}
 
 /*===================================================
 Section (aanbevolen voor jouw)
 ===================================================*/
-header+section {
+section article {
 	padding: 1em 1em 1em 1em;
-	margin-top: 1em;
-	background-image: url(images/header_trein.jpg);
 	background-color: #f4c015;
-
+	flex-wrap: wrap;
 }
 
-header+section h2{
+section article h2{
 	margin:0;
 }
-section>a{
+section article a{
 	background-color: #0079d3;
 	color: white;
 	box-shadow: inset 0 -0.125rem 0 #005ca0;
@@ -127,6 +163,9 @@ section>a{
 	width: 7.5em;
 }
 
+/*===================================================
+filter + sorteren
+===================================================*/
 
 
 /*===================================================
@@ -148,4 +187,3 @@ footer{
 	padding: 1em 1em 1em 1em;
 
 }
-
