overzichtspagina bijna af
Header af, alleen de verhalen en de verhaal van de maand af maken.

--- a/styles/style-inlog.css
+++ b/styles/style-inlog.css
@@ -53,24 +53,36 @@ h4 {font-size: 1.25em;}
 /*===================================================
 Nav
 ===================================================*/
-nav section a{
-	display: flex;
-}
-nav section h1{
-	font-size: 1em;
-}
 nav{
 	background-color: white;
-	width: 100%
+	width: 100%;
+	height: 3.750em;
 }
-nav section ul{
-	display: flex;
-	list-style-type:none;
-	justify-content:flex-end;
-	align-items: flex-start;
+nav .container section {
+    width: 20%;
+    padding: 1.2em 0em;
 }
-a{
-	text-decoration: none;
+nav .container section a h1 {
+    display: none;
+}
+nav .container ul {
+    margin: 0;
+    padding: 0;
+    width: 80%;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+nav .container ul li{
+	padding: 0.5em;
+}
+nav .container ul li a img{
+	
+}
+nav .container ul li a span,
+nav .container ul li form {
+    display: none;
 }
 
 /*===================================================
