--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@ h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
   font-weight: inherit;
   line-height: 1.2;
+  color:#005ca0;
 }
 
 h1 {
@@ -85,7 +86,7 @@ nav .container ul {
     align-items: center;
 }
 nav .container ul li{
-
+	padding: 0.5em;
 }
 nav .container ul li a img{
 	
@@ -119,11 +120,10 @@ header picture{
 
 header picture img {
 	width: 410%;
-	position: absolute;
-	 /* img mask */
+	position: absolute; 
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);/* img mask */
 }
 
 
@@ -131,7 +131,7 @@ header h2{
 	position: absolute;
 	z-index: 2;
 	align-self: center;
-	justify-self:  center;
+	justify-self: center;
 	margin: 0px 5%;
 	width: 90%;
 	padding: 1em;
@@ -161,20 +161,105 @@ section article a{
 	font-size: 1em;
 	display: inline-block;
 	width: 7.5em;
+	padding:0.5em;
+	text-decoration: none;
 }
 
 /*===================================================
 filter + sorteren
 ===================================================*/
+aside{
+	width: 100%;
+}
+fieldset{
+	border:none;
+	padding:0;
+}
+legend{
+	font-size: 1em;
+	color: #005ca0;
+}
+aside ul{
+	list-style: none;
+}
+aside h4{
+	font-size: 1em;
+	margin:0;
+}
+aside ul.tag{
+	display: flex;
+	flex-wrap: wrap;
+}
+aside ul.tag li{
+	list-style-type:none;
+	background-color:#0079d3;
+	padding:0.5em;
+	margin: 0.5em;
+}
+aside li a{
+	color:white;
+}
+aside a{
+	text-decoration: none;
+}
 
 
 /*===================================================
 Main
 ===================================================*/
+main{
+	width: 100%;
+}
+main section{
+
+}
+
 main section article{
 	background-color: white;
-	padding: 1em 1em 1em 1em;
+	padding:0;
 	margin-bottom: 1em;
+	width:100%;
+}
+main section article header {
+    height: auto;
+}
+
+main section article header h3 {
+    margin: 0;
+    position: absolute;
+    z-index: 2;
+    left: 0.5em;
+}
+
+main section article header button {
+    position: absolute;
+    z-index: 2;
+    right: 1em;
+    top: -1em;
+    padding: 1em;
+}
+
+main section article p {
+    padding: 0em 1em;
+}
+main section article picture{
+	width: 100%;
+    height: 12em;
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+main section article picture img{
+	width: 130%;
+	position: absolute; 
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);/* img mask */
+}
+
+
+button{
+	background-color: #f4c015;
 }
 
 /*===================================================
