--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,7 @@ header h2{
 	z-index: 2;
 	align-self: center;
 	justify-self: center;
-	margin: 0px 5%;
+	margin: 0 5%;
 	width: 90%;
 	padding: 1em;
 	background: #005ca0;
@@ -144,26 +144,80 @@ header h2{
 /*===================================================
 Section (aanbevolen voor jouw)
 ===================================================*/
-section article {
-	padding: 1em 1em 1em 1em;
+
+.uitgelicht{
+	width: 100%;
 	background-color: #f4c015;
-	flex-wrap: wrap;
 }
 
-section article h2{
-	margin:0;
+section.uitgelicht article{
+	background-color: #f4c015;
+	padding:0;
+	margin-bottom: 1em;
+	width:100%;
 }
-section article a{
-	background-color: #0079d3;
-	color: white;
-	box-shadow: inset 0 -0.125rem 0 #005ca0;
-	text-align: center;
-	font-size: 1em;
-	display: inline-block;
-	width: 7.5em;
+.uitgelicht button{
+	background-color: #f4c015;
+}
+
+section.uitgelicht article header {
+    height: 10em;
+}
+
+section.uitgelicht article header h2 {
+    margin: 0;
+    position: absolute;
+    z-index: 2;
+    left: 0.5em;
+    background-color:transparent;
+    padding: 0;
+    top: 0.5em; 
+    color:white;
+
+}
+
+section.uitgelicht article header button {
+    position: absolute;
+    z-index: 2;
+    right: 1em;
+    top: -1em;
+    padding: 1em;
+}
+
+section.uitgelicht article p {
+    padding: 0em 1em;
+}
+section .uitgelicht article picture{
+	width: 100%;
+    height: 12em;
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+section.uitgelicht article picture img{
+	width: 130%;
+	position: absolute; 
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);/* img mask */
+}
+.uitgelicht article ul{
+	list-style-type:none;
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 1em;
+}
+.uitgelicht footer{
+	background: #f4c015;
+}
+.uitgelicht footer a{
+	background-color:#0079d3;
+	color:white;
 	padding:0.5em;
 	text-decoration: none;
+	border-bottom: #005ca0 solid 0.25em;
 }
+
 
 /*===================================================
 filter + sorteren
@@ -195,12 +249,14 @@ aside ul.tag li{
 	background-color:#0079d3;
 	padding:0.5em;
 	margin: 0.5em;
+	border-bottom: #005ca0 solid 0.25em;
 }
 aside li a{
 	color:white;
 }
 aside a{
 	text-decoration: none;
+
 }
 
 
@@ -211,7 +267,7 @@ main{
 	width: 100%;
 }
 main section{
-
+	width: 100%;
 }
 
 main section article{
@@ -229,6 +285,9 @@ main section article header h3 {
     position: absolute;
     z-index: 2;
     left: 0.5em;
+    top:0.5em;
+    color: white;
+    text-shadow: 0px 0px 7px rgba(0,0,0,5); /* x-as, y-as, blurr, kleur */
 }
 
 main section article header button {
@@ -238,7 +297,16 @@ main section article header button {
     top: -1em;
     padding: 1em;
 }
+button{
+	background-color: #f4c015;
+}
 
+main section article ul{
+	list-style-type:none;
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 1em;
+}
 main section article p {
     padding: 0em 1em;
 }
@@ -248,18 +316,23 @@ main section article picture{
     display: block;
     position: relative;
     overflow: hidden;
+
 }
 main section article picture img{
-	width: 130%;
+	width: 167%;
 	position: absolute; 
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);/* img mask */
 }
 
-
-button{
-	background-color: #f4c015;
+main section article footer a{
+	color:#0079d3;
+	text-decoration: none;
+}
+main section article footer a:hover {
+	color:#005ca0;
+	text-decoration: none;
 }
 
 /*===================================================
