--- a/styles/style-inlog.css
+++ b/styles/style-inlog.css
@@ -264,18 +264,25 @@ input {
     box-sizing: border-box;
 }
 
-input[type=text] {
+input[type=email] {
     border: none;
     outline: none;
 }
 
-input[type=text]:focus {
+input[type=email]:focus {
     border: 0.1em dotted ;
+}
+input[type=email]:valid { 
+    background-color: lightgreen;
 }
 
 input[type=password] {
     border: none;
     outline: none;
+
+}
+input[type=password]:valid {
+    background-color: lightgreen;
 
 }
 input[type=password]:focus {
